# busbits

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
busbits/: __init__.py  busbits.py  models.py
busbits/generators/datasheet_md/: __init__.py  datasheet_md.py
busbits/models/: __init__.py  device.py  generator.py  library.py
busbits/yaml_schemas/: device.py
samples/busbits/: axpdoc.yaml
samples/busbits/devices/testdevice/: _root.yaml
